--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,11 @@
   padding: 0;
  
 }
+
+a {
+  color: black;
+  text-decoration: none;
+}
 .container{
   width: 100vw;
   height: 100vh;
@@ -16,3 +21,4 @@
 .content{
   height: calc(100vh - 6rem);
 }
+
