--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,8 +1,6 @@
 .container-home {
-  display: flex; 
   padding-left: 1rem;
   padding-right: 1rem; 
-  flex-direction: column; 
   height: 100%; 
   
   @media (min-width: 640px) { 
@@ -23,27 +21,30 @@
   padding-right: 12rem; 
    }
   
-  
-  
+}
+.container-flex {
+  display: flex; 
+  flex-direction: row; 
+  flex-wrap: wrap;
+  gap: 2%;
 }
 .image-container {
    
-  height: auto;
-  @media (min-width: 500px) { 
-      
-    height: 50%; 
-  }
+  height: auto; 
+  width: 90%;
 
-  @media (min-width: 1024px) { 
-    width: 60%; 
-    height: 60%; 
+  @media (min-width: 680px) { 
+    width: 80%; 
+   }
+  @media (min-width: 1000px) { 
+    width: 49%; 
    }
 
 }
 
 .image-profile {
   width: 100%;
-  height: 100%;
+   
   object-fit: contain;
 }
 
@@ -55,10 +56,11 @@
   align-items: center; 
   height: 50%; 
   color: black;
+  width: 100%;
+
 
   @media (min-width: 1024px) { 
-  width: 50%; 
-  height: 100%; 
+  width: 49%; 
  }
 
 } 
@@ -88,9 +90,10 @@
 }
 
  .button-container {
-  display: flex; 
-  gap: 1rem; 
-  height: 10%;
+  display: flex;
+  justify-content: center; 
+  gap: 1rem;
+  margin-top: 2rem;
  }
 
  .button-contact {
