--- a/src/css/about.css
+++ b/src/css/about.css
@@ -3,22 +3,22 @@
   justify-content: center;
   padding: 2rem; 
   flex-direction: column; 
-  gap: 8rem; 
+  gap: 6rem; 
 
   @media (min-width: 640px) { 
     padding: 2rem; 
   }
   @media (min-width: 768px) { 
     padding: 3rem; 
-    gap: 8rem; 
+    gap: 6rem; 
   }
   @media (min-width: 1024px) { 
-    padding: 5rem; 
-    gap: 8rem; 
+    padding: 2rem 6rem 2rem 6rem; 
+    gap: 6rem; 
   }
   @media (min-width: 1280px) { 
-    padding: 8rem; 
-    gap: 16rem;   
+    padding: 2rem 8rem 2rem 8rem; 
+    gap: 8rem;   
   }
 
 }
@@ -32,9 +32,9 @@
 
 }
 .biography h1 {
-  font-size: 1.5rem;
+  font-size: 3rem;
   line-height: 2rem; 
-  font-weight: 700; 
+  font-weight: 700;
 }
 .biography span {
   font-style: italic; 
@@ -53,7 +53,9 @@ line-height: 1.75rem;
 .image {
   border-radius: 8rem;
 }
-
+.image:hover {
+  transform: scale(1.02);
+}
 .container-skills {
   display: flex;
   flex-direction: column;
@@ -68,12 +70,9 @@ line-height: 1.75rem;
   gap: 1rem; 
   
 }
-.container-skills h1 {
-  font-size: 1.5rem;
-  line-height: 2rem; 
-  font-weight: 700; 
  
-}
+
+
 .s-list {
   display: flex; 
 flex-wrap: wrap; 
@@ -89,11 +88,24 @@ gap: 1rem;
   background-color: #000000; 
   cursor: pointer; 
   
-  :hover {
-  color: #000000; 
-  background-color: #ffffff;
+  
+}
+
+.social {
+  
+
+  @media (min-width: 768px) {  
+    display: flex;  
+    gap: 1rem;
+    width: 33.33%;  
   }
 }
+
+.social a {
+  margin: 0 0.5rem;
+  
+}
+ 
 .photo-circle {
   border-radius: 10rem;
 }
