--- a/src/css/home.css
+++ b/src/css/home.css
@@ -44,8 +44,13 @@
 
 .image-profile {
   width: 100%;
-   
+  border-radius: 15px;
   object-fit: contain;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease;
+}
+.image-profile:hover {
+  transform: scale(1.02);
 }
 
 .text-container {
@@ -95,6 +100,9 @@
   gap: 1rem;
   margin-top: 2rem;
  }
+ .button-container :hover {
+   cursor: pointer;
+ }
 
  .button-contact {
   padding: 1rem; 
@@ -103,7 +111,7 @@
   --ring-color: #000000; 
   color: #ffffff; 
   background-color: #000000; 
-   
+  
  }
 
 .button2 {
