--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,11 +1,11 @@
 .navbar {
-  /* CSS puro equivalente */
-  height: 100%; /* Establece la altura del elemento al 100% del contenedor */
-  display: flex; /* Establece el elemento como un contenedor flexible */
-  align-items: center; /* Centra los elementos hijos verticalmente dentro del contenedor */
-  justify-content: space-between; /* Distribuye los elementos hijos horizontalmente, con el primer elemento al principio y el último al final, con espacio uniformemente distribuido entre ellos */
-  padding-left: 4px; /* Equivalente a px-4 en Tailwind CSS */
-  padding-right: 4px; /* Equivalente a px-4 en Tailwind CSS */
+  
+  height: 100%;  
+  display: flex;  
+  align-items: center;  
+  justify-content: space-between;  
+  padding-left: 4px;   
+  padding-right: 4px;  
   font-size: 1.10rem;
   line-height: 1.45rem; 
   
@@ -14,29 +14,29 @@
  
 @media (min-width: 640px) {
   .navbar {
-    padding-left: 8px; /* Equivalente a sm:px-8 en Tailwind CSS */
-    padding-right: 8px; /* Equivalente a sm:px-8 en Tailwind CSS */
+    padding-left: 8px;  
+    padding-right: 8px;  
   }
 }
 
 @media (min-width: 768px) {
   .navbar {
-    padding-left: 12px; /* Equivalente a md:px-12 en Tailwind CSS */
-    padding-right: 12px; /* Equivalente a md:px-12 en Tailwind CSS */
+    padding-left: 12px;  
+    padding-right: 12px; 
   }
 }
 
 @media (min-width: 1024px) {
   .navbar {
-    padding-left: 20px; /* Equivalente a lg:px-20 en Tailwind CSS */
-    padding-right: 20px; /* Equivalente a lg:px-20 en Tailwind CSS */
+    padding-left: 20px;  
+    padding-right: 20px;  
   }
 }
 
 @media (min-width: 1280px) {
   .navbar {
-    padding-left: 48px; /* Equivalente a xl:px-48 en Tailwind CSS */
-    padding-right: 48px; /* Equivalente a xl:px-48 en Tailwind CSS */
+    padding-left: 48px;  
+    padding-right: 48px;  
   }
 }
 
@@ -47,7 +47,7 @@
   width: 100vh;
    
   
-  @media (max-width: 767px) { /* Up to medium screens */
+  @media (max-width: 767px) {  
     display: none;
   }
   
@@ -85,6 +85,8 @@
   height: 3px;
   background-color: white;
   border-radius: 0.25rem;
+  transform-origin: left; 
+  
 }
 
 .nav-burguer {
@@ -98,7 +100,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 15px; /* Gap between elements */
+  gap: 15px; 
   font-size: 1.5rem;
   
 }
