--- a/src/css/home.css
+++ b/src/css/home.css
@@ -106,9 +106,7 @@
 
  .button-contact {
   padding: 1rem; 
-  border-radius: 0.5rem; 
-  box-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color); 
-  --ring-color: #000000; 
+  border-radius: 2rem;
   color: #ffffff; 
   background-color: #000000; 
   
@@ -116,8 +114,7 @@
 
 .button2 {
   padding: 1rem; 
-border-radius: 0.5rem; 
-box-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color); 
---ring-color: #000000; 
+  background-color: white;
+  border-radius: 2rem;
  
 }
