--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,10 @@
 *{
   margin: 0;
   padding: 0;
- 
+  font-family: 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 15px
 }
-  
+ 
 a {
   color: black;
   text-decoration: none;
